tab color change on click

--- a/UIRouter/index.html
+++ b/UIRouter/index.html
@@ -18,8 +18,11 @@
     	.mag{
     		margin:0px;
     	}
-			.list-group-item:focus{
-				background: red;
+			.activeButton {
+    		background-color:#000;
+			}
+			.activeButton1 {
+    		background-color:#000;
 			}
     </style>
 </head>
